<resources>
    <string name="app_name">Sampa Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="string_home">Home</string>
    <string name="string_Culture">Culture</string>
    <string name="string_parks">Parks</string>
    <string name="string_gastronomy">Gastronomy</string>
    <string name="string_entertainment">Entertainment</string>
    <string name="string_about">About</string>
    <string name="string_more">More</string>
    <string name="string_about_description">This project was developed as module 3 final project.</string>
    <string name="string_about_description2">I was able to learn about list adapters, fragments, navdrawer.</string>
    <string name="culture_masp_name">Museu de Arte de São Paulo</string>
    <string name="culture_masp_description">Masp is one of the most visited touristic places in paulista capital. The space is world wide known to have about eight thousand pieces of art, including important artists (like Portinari, Di Cavalcanti, Rafael, Botticelli, Renoir, Monet, Picasso, Van Gogh, and others ), it has a modern architecture and is situated on Paulista Avenue. The place also receive temporary expositions and own atellier, library and auditorium for presentations.</string>
    <string name="culture_masp_webpage">http://masp.art.br/</string>
    <string name="culture_masp_address">Avenida Paulista, 1578 – Bela Vista</string>
    <string name="culture_masp_price">R$ 25,00</string>
    <string name="culture_masp_schedule">Tue&#8211;Mon 10:00&#8211;18:00</string>
    <string name="culture_masp_phone">(11) 3251&#8211;5644</string>
    <string name="culture_mac_name">Museu de Arte Contemporânea</string>
    <string name="culture_mac_description">MAC owns items from Modigliani, Pablo Picasso, Alexander Calder, Tarsila do Amaral, Anita Malfatti, and others. Administrated by University of São Paulo (USP), the museum completed 50 yers in 2013. </string>
    <string name="culture_mac_webpage">http://www.mac.usp.br/mac/</string>
    <string name="culture_mac_address">Avenida Pedro Álvares Cabral, 1301</string>
    <string name="culture_mac_price">Free</string>
    <string name="culture_mac_schedule">Tue&#8211;Mon 10:00&#8211;18:00</string>
    <string name="culture_mac_phone">(11) 2648&#8211;0254</string>
    <string name="culture_imigracao_japonesa_name">Museu Histórico da Imigração Japonesa</string>
    <string name="culture_imigracao_japonesa_description">The museum has more than 97 thousand of items belonging to japanese immigrants, like documents, photos, journals, films, books, frames and kimonos, that tell the history of Japanese immigration in Brazil.</string>
    <string name="culture_imigracao_japonesa_webpage">http://www.museubunkyo.org.br</string>
    <string name="culture_imigracao_japonesa_address">Rua São Joaquim, 381 &#8211; Liberdade</string>
    <string name="culture_imigracao_japonesa_schedule">Tue&#8211;Mon 13:30&#8211;17:30</string>
    <string name="culture_imigracao_japonesa_phone">(11) 3209&#8211;5465</string>
    <string name="culture_lampada_name">Museu da Lâmpada</string>
    <string name="culture_lampada_description">A place that adds knowledge and at the same time holds a significant historical heritage, the lamp museum was inaugurated on April 15, 2012 to delight the public and present the history of the invention that is the symbol of the good idea. The museum has a collection of research, materials and equipment capable of reproducing the timeline, from the discovery of fire, the invention of the lamp, to the development of the most modern lighting technology.</string>
    <string name="culture_lampada_webpage">http://www.museudalampada.com.br</string>
    <string name="culture_lampada_address">Avenida João Pedro Cardoso, 574 – Campo Belo</string>
    <string name="culture_lampada_price">Donation of 1kg of food</string>
    <string name="culture_lampada_schedule">Mon&#8211;Fri 9:00&#8211;18:00</string>
    <string name="culture_lampada_phone">(11) 2898&#8211;9358</string>
    <string name="culture_pinacoteca_name">Pinacoteca do Estado</string>
    <string name="culture_pinacoteca_description">Dated from 1895, the building located in Praça da Luz, designed by Ramos de Azevedo, houses the Pinacoteca do Estado. Founded in 1905, it is the oldest art museum in the city of São Paulo. The ten rooms are occupied with the collection of about one hundred thousand works. Its focus is works of Brazilian production from the nineteenth century to the present day.</string>
    <string name="culture_pinacoteca_webpage">http://www.pinacoteca.org.br</string>
    <string name="culture_pinacoteca_address">Praça da Luz, 2 – Luz – Centro</string>
    <string name="culture_pinacoteca_price">R$ 6</string>
    <string name="culture_pinacoteca_schedule">Tue&#8211;Mon 10:00&#8211;18:00</string>
    <string name="culture_pinacoteca_phone">(11) 3324&#8211;1000</string>
    <string name="parks_ibirapuera_name">Parque Ibirapuera</string>
    <string name="parks_ibirapuera_description">O Parque Ibirapuera é um parque urbano na cidade de São Paulo, Brasil. Ele tem 158ha (390 acres) entre as avenidas Pedro Álvares Cabral, República do Líbano e IV Centenário. O Parque Ibirapuera é o parque mais visitado da America Latina com aproximadamente 14 milhões de visitas em 2017, e é um dos locais mais fotografados do mundo.</string>
    <string name="parks_ibirapuera_webpage">www.parqueibirapuera.org</string>
    <string name="parks_ibirapuera_address">Av. Pedro Álvares Cabral, s/n° – Vila Mariana</string>
    <string name="parks_ibirapuera_schedule">Daily 5:00&#8211;24:00</string>
    <string name="parks_ibirapuera_phone">(11) 5574&#8211;5505</string>
    <string name="parks_aclimacao_name">Parque da Aclimação</string>
    <string name="parks_aclimacao_description">Created at the beginning of the 20th century with the intention of raising dairy cattle, the park &#8211; formerly called the Aclimação Garden &#8211; was also sought after by families for leisure. Since 1983, faced with threats of loss of the area by real estate growth, residents of the neighborhood joined in a movement to protect the park and in 1986 was made official the tipping of the park by CONDEPHAAT. Three sculptures by Arcangelo Ianelli are distributed in the green park: "White Dance", "The Return" and "Corrupted Form".</string>
    <string name="parks_aclimacao_webpage">www.prefeitura.sp.gov.br/parques</string>
    <string name="parks_aclimacao_address">Rua Muniz de Souza, 1.119 – Aclimação</string>
    <string name="parks_aclimacao_schedule">Daily 6:00&#8211;22:00</string>
    <string name="parks_aclimacao_phone">(11) 3208&#8211;4042</string>
    <string name="parks_carmo_name">Parque do Carmo – Olavo Egydio Setúbal</string>
    <string name="parks_carmo_description">Opened in 1976, Parque do Carmo is 1.5 million m². The forest has about 6,000 trees, including cherry trees and eucalyptus trees, natural lakes and various species of animals. The structure of the museum is complete and the visitor has the Museum of the Environment, amphitheater, gymnastics equipment, soccer fields, cycle path, jogging track, playgrounds, picnic space, barbecue grills, kiosks, Japanese Immigration Monument, Arthur Etzel Nursery and Forest of Reading. Since 1978, the Cherry Festival, which commemorates the flowering of the symbolic tree of Japan, is held here.</string>
    <string name="parks_carmo_webpage">www.prefeitura.sp.gov.br/parques</string>
    <string name="parks_carmo_address">Av. Afonso de Sampaio e Souza, 951 – Itaquera</string>
    <string name="parks_carmo_schedule">Daily 5:30&#8211;18:00</string>
    <string name="parks_carmo_phone">(11) 2748&#8211;0010</string>
    <string name="parks_juventude_name">Parque da Juventude</string>
    <string name="parks_juventude_description">The Youth Park has changed the landscape of the North Zone of São Paulo since 2003, replacing the Carandiru Penitentiary Complex with an outdoor leisure and entertainment area. It has a large green area, sports practice facilities, leisure and entertainment areas for people of all ages, canine space and open space for shows and events. The space houses the São Paulo Library, with more than 35 thousand titles, and Acessa São Paulo, a digital inclusion program of the State Government. At the site, historical references of the Carandiru era were maintained.</string>
    <string name="parks_juventude_webpage">www.parquedajuventudesma.blogspot.com.br</string>
    <string name="parks_juventude_address">Av. Zaki Narchi, 1.309 – Carandiru – zona Norte</string>
    <string name="parks_juventude_schedule">Daily 5:30&#8211;18:00</string>
    <string name="parks_juventude_phone">(11) 2251&#8211;2706</string>
    <string name="parks_trabalhador_name">Parque Esportivo do Trabalhador</string>
    <string name="parks_trabalhador_description">One of the best spaces for practicing sports in the state capital is the Workers Sports Park, in the East zone. Administered by the Municipal Department of Sports, Leisure and Recreation, the park offers a structure for the practice of dozens of activities of the most varied types. The site has 286 thousand square meters of area, divided into three football fields, four volleyball courts, two basketball courts, four sports courts, six tennis courts (two of which are clay courts), a rugby field, four swimming pools, walk, 400 m track, three gymnasiums, playground, a multi&#8211;sports gymnasium and a "pipódromo", space specially reserved to fly kites safely.</string>
    <string name="parks_trabalhador_webpage">www.prefeitura.sp.gov.br/parques</string>
    <string name="parks_trabalhador_address">Rua Canuto de Abreu, s/n° – Tatuapé</string>
    <string name="parks_trabalhador_schedule">Mon&#8211;Fri 6:00&#8211;22:00; Sat&#8211;Sun 6:00&#8211;18:00</string>
    <string name="parks_trabalhador_phone">(11) 2671&#8211;8788</string>
    <string name="parks_villalobos_name">Parque Villa&#8211;Lobos</string>
    <string name="parks_villalobos_description">Located in the Alto dos Pinheiros neighborhood, in the western region of the Capital, Villa&#8211;Lobos Park is one of the best outdoor leisure options in the city. The park, which covers an area of 732 thousand m², has a bike path, blocks, soccer fields, playground and forest with Atlantic Forest species. The leisure area also includes gym equipment, jogging track, street basketball tables and an open amphitheater with 750 seats, toilets adapted for the disabled and snack bar. It is estimated that during the week about 8 thousand people pass each day through the Park. At weekends it receives around 50 thousand visitors and 60 thousand holidays.</string>
    <string name="parks_villalobos_webpage">www.parquevillalobos.sp.gov.br</string>
    <string name="parks_villalobos_address">Av. Professor Fonseca Rodrigues – 2.001 – Alto de Pinheiros</string>
    <string name="parks_villalobos_schedule">Daily 5:30&#8211;19:00</string>
    <string name="parks_villalobos_phone">(11) 3021&#8211;6285</string>
    <string name="entertainment_igrejinha_name">Igrejinha Bar and Cafe</string>
    <string name="entertainment_igrejinha_description">Opened in 2012, the bar Igrejinha, with unpretentious climate and alternative public, is decorated with Ribbons of Bomfim, antique sofas, rugs and images of saints. Running from Thursday to Sunday, nights at the property are packed with indie rock. Among the drinks served are the traditional cosmopolitan, mojito, gin fizz and caipirinha, in addition to the house specials, such as aphrodite, made with gin, violet flavoring and lemon twist.</string>
    <string name="entertainment_igrejinha_webpage">https://www.igrejinhabar.com.br</string>
    <string name="entertainment_igrejinha_address">Rua Fernando de Albuquerque, 302 &#8211; Consolação</string>
</resources>