<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/string_home" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/string_Culture" />
        <item
            android:id="@+id/nav_parks"
            android:icon="@drawable/ic_directions_bike_black_24dp"
            android:title="@string/string_parks" />
        <item
            android:id="@+id/nav_gastronomy"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/string_gastronomy" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/string_entertainment" />
    </group>

    <item android:title="@string/string_more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/string_about" />
        </menu>
    </item>
</menu>
